# kimi-tachi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARK.md  BUG_REPORT_MCP_DUPLICATION.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  STATUS.md  VISION.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-typos.yml  ci.yml  release.yml
agents/: calcifer.yaml  enma.yaml  hephaestus.yaml  hermes.yaml  kamaji.yaml  librarian.yaml  momus.yaml  nekobasu.yaml  oracle.yaml  phoenix.yaml  prometheus.yaml  shishigami.yaml  sisyphus.yaml  tasogare.yaml  teams.yaml
agents/coding/: calcifer.yaml  enma.yaml  kamaji.yaml  nekobasu.yaml  phoenix.yaml  shishigami.yaml  tasogare.yaml
agents/content/: chenlin.yaml  guojia.yaml  xunyu.yaml  zhugejin.yaml  zhugeliang.yaml
docs/: AGENTS.md  ANTI_PATTERNS.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  GITHUB_SETUP.md  HOOKS_INTEGRATION.md  MEMNEXUS_040_INTEGRATION.md  MEMNEXUS_REQUIREMENTS.md  MEMORY_ARCHITECTURE_ANALYSIS.md  MEMORY_TEST_GUIDE.md  MEMORY_V053.md  PHASE0_VALIDATION_REPORT.md  QUICKSTART.md  ROADMAP.md  STATUS.md  V053_REFACTOR_SUMMARY.md  contributing.md  hooks.md  memory.md
hooks/: README.md  check-todos.sh  config.toml.example  pre-push  process-agent.sh  protect-sensitive.sh  recall-on-start.sh  store-before-compact.sh  summarize-on-end.sh  trace-agent.sh
plugins/category-router/: plugin.json
plugins/category-router/references/: agent-capabilities.md
plugins/category-router/scripts/: detect_category.py  list_categories.py  route_task.py
plugins/kimi-tachi/: SKILL.md  config.json  plugin.json
plugins/kimi-tachi/scripts/: agent_info.py  check_compatibility.py  execute_workflow.py  list_agents.py  list_tasks.py  memory_tool.py  session_status.py  workflow.py
plugins/todo-enforcer/: SKILL.md  plugin.json
plugins/todo-enforcer/scripts/: check_format.py  generate_template.py  validate_todos.py
scripts/: check_changelog.py  check_version.py  evaluate_cleanup.py  mcp_monitor_test.py  phase0_validator.py  test_build.py  test_memory.sh  test_memory_api.py  verify_phase2_1.py  verify_phase2_2.py  verify_phase2_2_simple.py
skills/_template/: SKILL.md
skills/agent-switcher/: SKILL.md
skills/category-router/: SKILL.md
skills/kimi-tachi/: SKILL.md
skills/kimi-tachi/references/: workflow-types.md
skills/todo-enforcer/: SKILL.md
skills/todo-enforcer/references/: todo-patterns.md
src/kimi_tachi/: __init__.py  __main__.py  cli.py  compatibility.py  config.py
src/kimi_tachi/adapters/: __init__.py  wire_adapter.py
src/kimi_tachi/background/: __init__.py  task_manager.py
src/kimi_tachi/context/: __init__.py  analysis_cache.py  compressor.py  file_cache.py  manager.py  semantic_index.py  types.py
src/kimi_tachi/hooks/: __init__.py  __main__.py  tools.py
src/kimi_tachi/memory/: __init__.py  agent_profiles.py  tachi_memory.py  tachi_memory_v2.py  tachi_memory_v3.py
src/kimi_tachi/message_bus/: __init__.py  hub.py  models.py  persistence.py  tracing.py
src/kimi_tachi/metrics/: __init__.py  collector.py  mcp_monitor.py  models.py
src/kimi_tachi/orchestrator/: __init__.py  agent_factory.py  context_manager.py  dependency_analyzer.py  executor.py  hybrid_orchestrator.py  native_agent_orchestrator.py  parallel_scheduler.py  plan.py  session_manager.py  workflow_engine.py
src/kimi_tachi/session/: __init__.py  agent_session.py
src/kimi_tachi/team/: __init__.py  exceptions.py  manager.py
src/kimi_tachi/tracing/: __init__.py  agent_tracer.py  metrics.py
src/kimi_tachi/vis/: __init__.py  exporter.py  workflow_renderer.py
tests/: __init__.py  test_agent_session.py  test_background_tasks.py  test_cli.py  test_compatibility.py  test_config.py  test_context_cache.py  test_memory.py  test_message_bus.py  test_native_agent_orchestrator.py  test_parallel_workflow.py  test_placeholder.py  test_plugins.py  test_session_explorer.py  test_tracing.py  test_vis.py
tests/integration/: test_plugins.py
tests/unit/: test_agent_session.py  test_background_tasks.py  test_cli.py  test_executor.py  test_memory.py  test_native_agent_orchestrator.py  test_orchestrator.py  test_parallel_workflow.py  test_placeholder.py
tests_e2e/: test_cli_e2e.py
