[project]
name = "kimi-tachi"
version = "0.1.0"
description = "Multi-agent task orchestration for Kimi CLI (君たち)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["kimi", "cli", "agent", "ai", "multi-agent", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
    "kimi-sdk==0.2.1",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
]

[project.optional-dependencies]
sdk = [
    "kimi-sdk>=0.2.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
kimi-tachi = "kimi_tachi.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/kimi-tachi"
Repository = "https://github.com/yourusername/kimi-tachi"
Documentation = "https://github.com/yourusername/kimi-tachi#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kimi_tachi", "src/kimi_tachi/orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

# Note: Using `ty` (https://github.com/astral-sh/ty) for type checking
# Install: uv tool install ty
# Usage: ty check src/
