[project]
name = "kimi-tachi"
version = "0.4.0"
description = "Multi-agent task orchestration for Kimi CLI (君たち)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "kimi-tachi Team", email = "team@kimi-tachi.dev"}
]
keywords = ["kimi", "cli", "agent", "ai", "multi-agent", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
    # Data validation
    "pydantic>=2.0.0",
    # Configuration parsing
    "pyyaml>=6.0.0",
    # SDK for task analysis
    "kimi-sdk>=0.2.1",
    # Code semantic analysis
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
kimi-tachi = "kimi_tachi.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/kimi-tachi"
Repository = "https://github.com/yourusername/kimi-tachi"
Documentation = "https://github.com/yourusername/kimi-tachi#readme"
Changelog = "https://github.com/yourusername/kimi-tachi/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kimi_tachi"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
]

# Note: Using `ty` (https://github.com/astral-sh/ty) for type checking
# Install: uv tool install ty
# Usage: ty check src/
